[gd_scene load_steps=2 format=3 uid="uid://bxgnrwanebyyf"]

[ext_resource type="Script" uid="uid://csy5mdgalkyym" path="res://Base/health_controller.gd" id="1_ias7n"]

[node name="HealthController" type="Node2D"]
script = ExtResource("1_ias7n")

[node name="HurtCooldownTimer" type="Timer" parent="."]

[connection signal="timeout" from="HurtCooldownTimer" to="." method="_on_hurt_cooldown_timer_timeout"]
